Bulk and tslint settings

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "outDir": "./dist/",
-    "noImplicitAny": true,
+    "noImplicitAny": false,
     "esModuleInterop": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
@@ -9,7 +9,9 @@
     "module": "commonjs",
     "allowJs": true,
     "sourceMap": true,
-    "alwaysStrict": true
+    "alwaysStrict": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
   },
   "include": [
     "src/**/*"
