--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "build": "tsc",
     "watch": "tsc -w",
-    "start": "sls offline",
-    "test": "nyc mocha -r ts-node/register test/**/*.spec.js",
+    "start": "nodemon --exec sls offline --skipCacheInvalidation",
+    "test": "nyc mocha -r ts-node/register test/**/*.spec.js test/**/*.spec.ts",
     "prettier:all": "prettier-tslint fix src/{**/*.{ts,tsx},*.{ts,tsx}}",
     "prettier:changed": "prettier-tslint fix",
     "tslint": "tslint --project tsconfig.json",
@@ -18,19 +18,23 @@
   "dependencies": {
     "@admixltd/admix-error": "^1.2.4",
     "@middy/core": "^1.0.0",
+    "@types/chai-as-promised": "^7.1.3",
+    "@types/sinon-stub-promise": "^2.1.7",
     "class-transformer": "^0.2.3",
     "class-transformer-validator": "^0.8.0",
     "class-validator": "^0.12.2",
+    "http-method-enum": "^1.0.0",
     "middy": "^0.36.0",
     "mongodb": "^3.5.7",
-    "serverless-typeorm": "^0.2.18",
+    "mongoose": "^5.10.15",
     "typescript": "3.7.4"
   },
   "devDependencies": {
-    "@types/aws-lambda": "^8.10.51",
+    "@types/aws-lambda": "^8.10.64",
     "@types/chai": "4.2.7",
     "@types/mocha": "5.2.7",
     "@types/mongodb": "^3.5.16",
+    "@types/mongoose": "^5.10.1",
     "@types/sinon": "7.5.1",
     "aws-sdk": "2.601.0",
     "chai": "4.2.0",
@@ -39,13 +43,13 @@
     "husky": "1.3.1",
     "lint-staged": "8.2.1",
     "mocha": "^7.1.2",
+    "nodemon": "^2.0.6",
     "nyc": "^15.0.1",
     "prettier": "^2.0.5",
     "prettier-tslint": "^0.4.2",
     "serverless": "^1.76.1",
     "serverless-mocha-plugin": "^1.12.0",
     "serverless-offline": "5.12.1",
-    "serverless-typeorm": "^0.2.18",
     "serverless-webpack": "5.3.1",
     "sinon": "8.1.0",
     "sinon-stub-promise": "4.0.0",
